# monoglxr

./: CMakeLists.txt
examples/desktop_mock/: main_win32.cpp  win32_mock_backend.cpp  win32_mock_backend.hpp
examples/desktop_mock/fonts/: u8g2_font_6x10_ascii.hpp
src/: font.hpp  present.hpp  present_types.hpp  surface.cpp  surface.hpp
